--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vitest/coverage-c8": "^0.24.5",
+    "unbuild": "^0.9.4",
     "vitest": "^0.24.5"
   }
 }
