feat: 完善项目架子&&代码规范

--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -2,8 +2,11 @@
   "name": "@hdcq/reactivity",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "unbuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
