--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:utils": "pnpm run --filter @hdcq/utils build",
+    "build:reactivity": "pnpm run --filter @hdcq/reactivity build",
+    "build": "pnpm run --filter=\"@hdcq/*\" build",
+    "test:watch": "vitest",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "eslint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx,.vue ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.24.5",
+    "@antfu/eslint-config": "^0.30.1",
+    "@vitest/coverage-c8": "0.24.3",
+    "eslint": "^8.27.0",
+    "typescript": "^4.8.4",
     "unbuild": "^0.9.4",
-    "vitest": "^0.24.5"
+    "vitest": "0.24.3"
   }
 }
